<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_catalog"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_filled"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />

</menu>