<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_catalog">

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.example.driverrewards.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog">
        
        <action
            android:id="@+id/action_catalog_to_product_detail"
            app:destination="@id/navigation_product_detail" />
    </fragment>
    
    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.driverrewards.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites">
        
        <action
            android:id="@+id/action_favorites_to_product_detail"
            app:destination="@id/navigation_product_detail" />
    </fragment>
    
    <fragment
        android:id="@+id/navigation_product_detail"
        android:name="com.example.driverrewards.ui.catalog.ProductDetailFragment"
        android:label="Product Details"
        tools:layout="@layout/fragment_product_detail">
        
        <argument
            android:name="itemId"
            app:argType="string" />
        
        <argument
            android:name="variationInfo"
            app:argType="string"
            android:defaultValue="@null" />
        
        <action
            android:id="@+id/action_product_detail_to_product_detail"
            app:destination="@id/navigation_product_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.driverrewards.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart">
        
        <action
            android:id="@+id/action_cart_to_product_detail"
            app:destination="@id/navigation_product_detail"
            app:popUpTo="@id/navigation_cart"
            app:popUpToInclusive="false" />
        
        <action
            android:id="@+id/action_cart_to_checkout"
            app:destination="@id/navigation_checkout" />
    </fragment>

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.driverrewards.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders">
        
        <action
            android:id="@+id/action_orders_to_order_detail"
            app:destination="@id/navigation_order_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order_detail"
        android:name="com.example.driverrewards.ui.orders.OrderDetailFragment"
        android:label="Order Details"
        tools:layout="@layout/fragment_order_detail">
        
        <argument
            android:name="orderId"
            app:argType="string" />
        
        <action
            android:id="@+id/action_order_detail_to_checkout"
            app:destination="@id/navigation_checkout" />
        
        <action
            android:id="@+id/action_order_detail_to_product_detail"
            app:destination="@id/navigation_product_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_checkout"
        android:name="com.example.driverrewards.ui.cart.CheckoutFragment"
        android:label="Checkout"
        tools:layout="@layout/fragment_checkout">
        
        <argument
            android:name="totalPoints"
            app:argType="integer"
            android:defaultValue="0" />
        
        <argument
            android:name="itemCount"
            app:argType="integer"
            android:defaultValue="0" />
        
        <argument
            android:name="orderId"
            app:argType="string"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.driverrewards.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        
        <action
            android:id="@+id/action_profile_to_profile_detail"
            app:destination="@id/navigation_profile_detail" />
        
        <action
            android:id="@+id/action_profile_to_points_detail"
            app:destination="@id/navigation_points_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile_detail"
        android:name="com.example.driverrewards.ui.profile.ProfileDetailFragment"
        android:label="Driver Profile"
        tools:layout="@layout/fragment_profile_detail">
        
        <action
            android:id="@+id/action_profile_detail_to_profile"
            app:destination="@id/navigation_profile"
            app:popUpTo="@id/navigation_profile"
            app:popUpToInclusive="false" />
        
        <action
            android:id="@+id/action_profile_detail_to_points_detail"
            app:destination="@id/navigation_points_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_points_detail"
        android:name="com.example.driverrewards.ui.points.PointsDetailFragment"
        android:label="Points Details"
        tools:layout="@layout/fragment_points_detail">
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.driverrewards.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">

        <action
            android:id="@+id/action_navigation_notifications_to_notificationSettingsFragment"
            app:destination="@id/navigation_notification_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notification_settings"
        android:name="com.example.driverrewards.ui.notifications.NotificationSettingsFragment"
        android:label="@string/notification_settings"
        tools:layout="@layout/fragment_notification_settings" />

</navigation>